--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^4.0.1",
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"express": "^4.17.1",
+		"jwt-simple": "^0.5.6",
 		"mongoose": "^5.9.9",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.3"
